--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: "franklin-gothic-urw", helvetica, arial, verdana, sans-serif;;
 }
 
+
 .topnav image
 {
     height: 20px;
@@ -176,7 +177,7 @@
 .cuerpo .content-container .socials
 {
     display: grid;
-    gap: 5px;
+    gap: 1px;
 }
 
 .cuerpo .content-container .socials p
@@ -201,4 +202,44 @@
     width: auto;
 }
 
+.cuerpo .recomended
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+}
 
+.cuerpo .image-cont img
+{
+    height: auto;
+    width: 70%;
+}
+
+.cuerpo .head-separator
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.cuerpo .image-cont
+{
+    display: flex;
+}
+
+.cuerpo .image-cont p
+{
+    font-size: 50px;
+}
+
+.cuerpo .news p
+{
+    margin-right: 0px;    
+    margin-left: 17%;
+}
+
+.cuerpo .news-grid
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
